[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "care"
version = "0.1.1"
dependencies = [
  "acat==1.6.8",
  "ase==3.22.1",
  "matplotlib==3.8.0",
  "networkx==3.2",
  "numpy==1.26.3",
  "pandas==2.2.0",
  "prettytable==3.9.0",
  "pydot==2.0.0",
  "pymatgen==2024.2.20",
  "rdkit==2023.3.3",
  "scikit_learn==1.3.1",
  "scipy==1.12.0",
  "setuptools==70.0.0",
  "numba",
  "energydiagram @ git+https://github.com/giacomomarchioro/PyEnergyDiagrams",
  "rich",
  "py-cpuinfo",
]
#requires-python = "==3.11.*"
authors = [
  {name = "Santiago Morandi", email = "smorandi@iciq.es"},
  {name = "Oliver Loveday", email = "oloveday@iciq.es"},
  {name = "Pol Sanz Berman", email = "psanz@iciq.es"}
]
maintainers = [
  {name = "Santiago Morandi", email = "smorandi@iciq.es"},
  {name = "Oliver Loveday", email = "oloveday@iciq.es"},
  {name = "Pol Sanz Berman", email = "psanz@iciq.es"}
]
description = "Chemical Reaction Network generator for heterogenous catalysis on transition metal surfaces"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["heterogeneous catalysis", "chemical reaction networks", "kinetics", "machine learning"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/LopezGroup-ICIQ/care"

[project.scripts]
"care_run" = "care.scripts.care_script:main"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "src" }
