[metadata]
name = dockonsurf
version = 0.0.1
author = Carles Martí
author_email = carles.marti2@gmail.com
description = "Code to systematically find the most stable geometry for molecules on surfaces
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/lch_interfaces/dockonsurf
project_urls =
    Documentation = https://dockonsurf.readthedocs.io/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires='>=3.6',
